--- a/frontend/src/shared/styles/fonts.scss
+++ b/frontend/src/shared/styles/fonts.scss
@@ -1,15 +1,6 @@
-
 @font-face {
-    font-family: "Gilroy Regular";
-    src: url('../fonts/Gilroy-Regular.ttf');
-}
-
-@font-face {
-    font-family: "Gilroy Medium";
-    src: url('../fonts/Gilroy-Medium.ttf');
-}
-
-@font-face {
-    font-family: "Gilroy Semibold";
-    src: url('../fonts/Gilroy-SemiBold.ttf');
+	font-family: "MuseoCyrl";
+	font-weight: 500;
+	font-style: normal;
+	src: url("../fonts/MuseoCyrl-500.otf");
 }
