--- a/frontend/src/pages/SearchPage/SearchPage.module.scss
+++ b/frontend/src/pages/SearchPage/SearchPage.module.scss
@@ -3,18 +3,20 @@
 	display: flex;
 	flex-direction: column;
 	gap: 25px;
+	justify-content: space-between;
+	min-height: 89vh;
 }
 .title {
 	font-size: 32px;
 	text-align: center;
 	width: 100%;
+	margin-bottom: 25px;
 }
 .block {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
 	flex-direction: column;
-	padding: 20px 0;
+	padding: 20px;
 	gap: 10px;
 	text-align: center;
 	font-size: 16px;
@@ -23,18 +25,16 @@
 	box-shadow: 0px 4px 8px 0px #00000040;
 	color: #000;
 	text-align: center;
-	font-family: "Museo Sans Cyrl";
 	font-size: 16px;
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 500;
 	line-height: 24px; /* 150% */
 }
 .subTitle {
 	color: var(--Colors-Neutral-Icon-colorIcon, rgba(0, 0, 0, 0.45));
-	font-family: "Museo Sans Cyrl";
 	font-size: 12px;
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 500;
 	line-height: 24px;
 }
 .uploadInput {
@@ -49,12 +49,56 @@
 	align-items: center;
 	gap: 8px;
 	color: #fff;
-	font-family: "Museo Sans Cyrl";
 	font-size: 16px;
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 500;
 	line-height: 24px; /* 150% */
 	border-radius: var(--Components-Button-Global-borderRadius, 6px);
 	background: #e33535;
 	box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.brnas {
+	color: white;
+}
+.Select {
+	background-color: white;
+}
+.choose {
+	text-align: start;
+	color: #000;
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 24px; /* 150% */
+}
+.subttitle {
+	color: #000;
+	text-align: center;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 24px; /* 133.333% */
+}
+.asdasdsadasdad {
+	width: 10px;
+}
+.inputs {
+	display: flex;
+	gap: 8px;
+}
+.description {
+	color: var(--Colors-Neutral-Icon-colorIcon, rgba(0, 0, 0, 0.45));
+	text-align: center;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 24px; /* 171.429% */
+}
+.chooseBlock {
+	gap: 20px;
+}
+.selectBlock {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
