--- a/frontend/src/components/card.module.scss
+++ b/frontend/src/components/card.module.scss
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: space-between;
 	flex-direction: column;
-	padding: 20px 0;
+	padding: 20px;
 	gap: 10px;
 	font-size: 16px;
 	line-height: 24px;
@@ -28,4 +28,10 @@
 }
 .active {
 	border: 3px solid #e33535;
+}
+
+.div {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
 }
