--- a/frontend/src/pages/SearchPage/SearchPage.module.scss
+++ b/frontend/src/pages/SearchPage/SearchPage.module.scss
@@ -1,5 +1,5 @@
 .page {
-	padding: 25px 22.5px 100px;
+	padding: 25px 22.5px 125px;
 	display: flex;
 	flex-direction: column;
 	gap: 25px;
@@ -101,4 +101,10 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+}
+.centerBtn {
+	position: fixed;
+	bottom: 85px;
+	left: 50%;
+	transform: translate(-50%);
 }
