--- a/frontend/src/pages/CandidatePage/CandidatePage.module.scss
+++ b/frontend/src/pages/CandidatePage/CandidatePage.module.scss
@@ -1,10 +1,8 @@
 .page {
-	padding: 25px 22.5px 125px;
+	padding: 25px 22.5px 100px;
 	display: flex;
 	flex-direction: column;
 	gap: 25px;
-	justify-content: space-between;
-	min-height: 89vh;
 }
 .title {
 	font-size: 32px;
@@ -13,21 +11,17 @@
 }
 .block {
 	display: flex;
-	justify-content: space-between;
 	flex-direction: column;
 	padding: 20px;
-	gap: 10px;
-	text-align: center;
+	gap: 20px;
 	font-size: 16px;
 	line-height: 24px;
 	border-radius: 20px;
 	box-shadow: 0px 4px 8px 0px #00000040;
-	color: #000;
-	text-align: center;
-	font-size: 16px;
-	font-style: normal;
-	font-weight: 500;
-	line-height: 24px; /* 150% */
+}
+.div {
+	display: flex;
+	justify-content: space-between;
 }
 .flex {
 	display: flex;
