--- a/frontend/src/pages/Layout/layout.module.scss
+++ b/frontend/src/pages/Layout/layout.module.scss
@@ -61,6 +61,7 @@
 	height: 75px;
 	border-radius: 0 0 12.5px 12.5px;
 	font-size: 24px;
+	gap: 20px;
 	background-color: #e33535;
 	justify-content: center;
 	align-items: center;
@@ -70,4 +71,9 @@
 	overflow: hidden;
 	width: 100%;
 	padding: 2.5px;
+}
+.logo {
+	background-image: url("../../shared/img/logo.svg");
+	width: 50px;
+	height: 50px;
 }
